apps/staging/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx
    version: 1.27.1
  name: nginx-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      imagePullSecrets:
        - name: dk-registry
      containers:
      - image: dbsmouse/nginx
        ports:
        - containerPort: 80
        name: nginx
